--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.4.0'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.2.3'
     testImplementation group: 'org.testng', name: 'testng', version: '7.6.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.18.0'
+    /*implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.18.0'*/
 }
 
 test {
