--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,14 @@ dependencies {
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.2.3'
     testImplementation group: 'org.testng', name: 'testng', version: '7.6.1'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.18.0'
-    /*implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.18.0'*/
+    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.18.0'
 }
 
 test {
     useTestNG()
+    println "Starting Tests"
+    println System.getProperty("env") ? System.getProperty("env") : 'env not defined'
+    println System.getProperty("browser") ? System.getProperty("browser") : 'browser not defined'
+
+    systemProperties = System.properties
 }
